oscilloscope ui changes (#1955)

--- a/app/src/main/res/layout-sw600dp/fragment_channel_parameters.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_channel_parameters.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -10,11 +9,10 @@
         android:id="@+id/checkBox_ch1_cp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/osc_cb_margin2"
+        android:layout_marginTop="@dimen/osc_cb_margin2"
         android:text="@string/label_ch1"
-        android:textSize="18sp"
+        android:textSize="@dimen/osc_text_size_large"
         android:textStyle="normal|bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,11 +21,10 @@
         android:id="@+id/checkBox_ch2_cp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginBottom="@dimen/osc_cb_margin2"
+        android:layout_marginStart="@dimen/osc_cb_margin2"
         android:text="@string/label_ch2"
-        android:textSize="18sp"
+        android:textSize="@dimen/osc_text_size_large"
         android:textStyle="normal|bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
@@ -36,70 +33,65 @@
         android:id="@+id/checkBox_ch3_cp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="@dimen/osc_cb_margin2"
+        android:layout_marginTop="@dimen/osc_cb_margin2"
         android:text="@string/ch3_value"
-        android:textSize="18sp"
+        android:textSize="@dimen/osc_text_size_large"
         android:textStyle="normal|bold"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/mic_radio_group"
+        app:layout_constraintStart_toEndOf="@id/spinner_channel_select_cp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_range1_cp"
         android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="@dimen/osc_tv_height"
+        android:layout_marginStart="@dimen/osc_cb_margin2"
+        android:layout_marginTop="@dimen/osc_cb_margin2"
         android:gravity="center_vertical"
         android:text="@string/range"
         android:textColor="@color/cardview_dark_background"
-        android:textSize="18sp"
+        android:textSize="@dimen/osc_text_size_large"
         app:layout_constraintLeft_toRightOf="@+id/checkBox_ch1_cp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_range2_cp"
         android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_height="@dimen/osc_tv_height"
+        android:layout_marginBottom="@dimen/osc_cb_margin2"
+        android:layout_marginStart="@dimen/osc_cb_margin2"
         android:gravity="fill_vertical"
         android:text="@string/range"
         android:textColor="@color/cardview_dark_background"
-        android:textSize="18sp"
+        android:textSize="@dimen/osc_text_size_large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/checkBox_ch2_cp" />
 
     <Spinner
         android:id="@+id/spinner_range_ch2_cp"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_height="@dimen/osc_spinner_height"
+        android:layout_marginBottom="@dimen/osc_cb_margin"
+        android:layout_marginStart="@dimen/osc_cb_margin2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/tv_range2_cp" />
 
     <Spinner
         android:id="@+id/spinner_channel_select_cp"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="@dimen/osc_spinner_height"
+        android:layout_marginStart="@dimen/osc_cb_margin2"
+        android:layout_marginTop="@dimen/osc_cb_margin"
         app:layout_constraintLeft_toRightOf="@+id/spinner_range_ch1_cp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/spinner_range_ch1_cp"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="@dimen/osc_spinner_height"
+        android:layout_marginStart="@dimen/osc_cb_margin2"
+        android:layout_marginTop="@dimen/osc_cb_margin"
         app:layout_constraintLeft_toRightOf="@+id/tv_range1_cp"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -107,32 +99,47 @@
         android:id="@+id/tv_ch2_cp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginBottom="@dimen/text_elevation"
+        android:layout_marginStart="@dimen/osc_cb_margin2"
         android:clickable="true"
         android:text="@string/label_ch2"
         android:textColor="@android:color/background_dark"
-        android:textSize="18sp"
+        android:textSize="@dimen/osc_text_size_large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/spinner_range_ch2_cp" />
 
-    <CheckBox
+    <RadioGroup
+        android:id="@+id/mic_radio_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/checkBox_mic_cp"
-        app:layout_constraintLeft_toLeftOf="@+id/checkBox_ch3_cp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginTop="@dimen/osc_cb_margin2"
+        android:layout_marginEnd="@dimen/osc_cb_margin2"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Spinner
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:id="@+id/spinner_mic_select_cp"
-        app:layout_constraintLeft_toRightOf="@+id/checkBox_mic_cp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
+        <CheckBox
+            android:id="@+id/built_in_mic_cb"
+            style="@style/Base.Widget.AppCompat.CompoundButton.RadioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/osc_tv_margin"
+            android:text="@string/built_in_mic_option"
+            android:textSize="@dimen/osc_text_size_large"
+            android:textStyle="normal|bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/pslab_mic_cb" />
 
+        <CheckBox
+            android:id="@+id/pslab_mic_cb"
+            style="@style/Base.Widget.AppCompat.CompoundButton.RadioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/pslab_mic_option"
+            android:textSize="@dimen/osc_text_size_large"
+            android:textStyle="normal|bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
 
-
+    </RadioGroup>
 </android.support.constraint.ConstraintLayout>
