--- a/app/src/main/res/layout/fragment_xyplot.xml
+++ b/app/src/main/res/layout/fragment_xyplot.xml
@@ -11,9 +11,7 @@
         android:id="@+id/checkBox_enable_xy_xy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="@dimen/osc_cb_margin"
         android:text="@string/enable_xy_plot"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,11 +19,10 @@
     <Spinner
         android:id="@+id/spinner_channel_select_xy2"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/osc_spinner_height"
         android:layout_below="@+id/checkBox_enable_xy_xy"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="@dimen/osc_cb_margin"
+        android:layout_marginStart="@dimen/osc_cb_margin"
         android:layout_toEndOf="@+id/spinner_channel_select_xy1"
         android:layout_toRightOf="@+id/spinner_channel_select_xy1"
         android:layout_weight="1"
@@ -36,15 +33,11 @@
     <Spinner
         android:id="@+id/spinner_channel_select_xy1"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_alignParentLeft="true"
+        android:layout_height="@dimen/osc_spinner_height"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/button_view_xy"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="@dimen/osc_cb_margin"
         android:layout_weight="1"
-        android:padding="2dp"
+        android:padding="@dimen/osc_spinner_padding"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
