--- a/app/src/main/res/layout/servo_controller_layout.xml
+++ b/app/src/main/res/layout/servo_controller_layout.xml
@@ -49,5 +49,15 @@
             android:maxLines="1"
             android:imeOptions="flagNoExtractUi"
             />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/robotic_arm_degree_symbol"
+            android:textStyle="bold"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:layout_toEndOf="@+id/degreeText"
+            android:layout_centerInParent="true"
+            />
     </RelativeLayout>
 </RelativeLayout>
